# azure-container-registry-creation-repo

./: .gitignore  README.md  main.tf  outputs.tf  pyproject.toml  render_acr.py
templates/: 1.j2  main.tf.j2
